--- a/TPMetodosAgiles/src/main/resources/Reporte/Listado.jrxml
+++ b/TPMetodosAgiles/src/main/resources/Reporte/Listado.jrxml
@@ -63,7 +63,7 @@ FROM
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="66" splitType="Stretch">
+		<band height="78" splitType="Stretch">
 			<image>
 				<reportElement uuid="ffa2a496-0dec-4d72-9301-88f73ecb4d2c" x="721" y="0" width="73" height="66"/>
 				<imageExpression><![CDATA["C:\\Proyectos Java\\TPMetodosAgiles\\TPMetodosAgiles\\src\\main\\resources\\Presentacion\\logo santa fe.png"]]></imageExpression>
@@ -148,7 +148,7 @@ FROM
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="18" splitType="Stretch">
+		<band height="36" splitType="Stretch">
 			<frame>
 				<reportElement uuid="1ab12f58-0a36-4bf0-a935-1f9d8cdc21f4" style="Row" mode="Opaque" x="0" y="0" width="797" height="18"/>
 				<textField isStretchWithOverflow="true">
@@ -218,7 +218,7 @@ FROM
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="7" splitType="Stretch">
+		<band height="100" splitType="Stretch">
 			<line>
 				<reportElement uuid="41262249-b9bc-43c5-8617-5af99165d5d8" positionType="FixRelativeToBottom" x="0" y="3" width="555" height="1"/>
 				<graphicElement>
@@ -228,9 +228,9 @@ FROM
 		</band>
 	</columnFooter>
 	<pageFooter>
-		<band height="25" splitType="Stretch">
+		<band height="40" splitType="Stretch">
 			<frame>
-				<reportElement uuid="e8a85128-74c4-452b-abfa-ebb51b31d619" mode="Opaque" x="0" y="0" width="802" height="25" forecolor="#D0B48E" backcolor="#000000"/>
+				<reportElement uuid="e8a85128-74c4-452b-abfa-ebb51b31d619" mode="Opaque" x="0" y="13" width="802" height="27" forecolor="#D0B48E" backcolor="#000000"/>
 				<textField evaluationTime="Report">
 					<reportElement uuid="23831eff-612e-47f7-b2ae-18258a9a1c49" style="Column header" x="757" y="3" width="40" height="20" forecolor="#FFFFFF"/>
 					<textElement verticalAlignment="Middle">
@@ -239,11 +239,11 @@ FROM
 					<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 				</textField>
 				<textField>
-					<reportElement uuid="64727cf1-8413-4ad0-8496-e0e187a39cea" style="Column header" x="677" y="3" width="80" height="20" forecolor="#FFFFFF"/>
+					<reportElement uuid="64727cf1-8413-4ad0-8496-e0e187a39cea" style="Column header" x="481" y="3" width="276" height="20" forecolor="#FFFFFF"/>
 					<textElement textAlignment="Right" verticalAlignment="Middle">
 						<font size="10" isBold="false"/>
 					</textElement>
-					<textFieldExpression><![CDATA["Page "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
+					<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 				</textField>
 				<textField pattern="EEEEE dd MMMMM yyyy">
 					<reportElement uuid="d1e9eeb7-3e0d-48d1-bffb-73d91cbb164d" style="Column header" x="2" y="3" width="197" height="20" forecolor="#FFFFFF"/>
