--- a/TPMetodosAgiles/src/main/java/Presentacion/ListadoLicencias.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/ListadoLicencias.form
@@ -105,9 +105,9 @@
                       <Component id="jButton11" min="-2" pref="33" max="-2" attributes="0"/>
                       <Component id="jButton12" min="-2" pref="33" max="-2" attributes="0"/>
                   </Group>
+                  <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
+                  <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-                  <Component id="jLabel2" min="-2" pref="43" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
                   <Component id="jSeparator1" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
@@ -161,7 +161,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Microsoft JhengHei UI" size="36" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Listado de licencias"/>
+            <Property name="text" type="java.lang.String" value="Listado de licencias vigentes"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tFiltro">
