--- a/TPMetodosAgiles/src/main/java/Presentacion/EmitirLicencia.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/EmitirLicencia.form
@@ -275,13 +275,13 @@
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
               <StringArray count="7">
-                <StringItem index="0" value="Clase A"/>
-                <StringItem index="1" value="Clase B"/>
-                <StringItem index="2" value="Clase C"/>
-                <StringItem index="3" value="Clase D"/>
-                <StringItem index="4" value="Clase E"/>
-                <StringItem index="5" value="Clase F"/>
-                <StringItem index="6" value="Clase G"/>
+                <StringItem index="0" value="A"/>
+                <StringItem index="1" value="B"/>
+                <StringItem index="2" value="C"/>
+                <StringItem index="3" value="D"/>
+                <StringItem index="4" value="E"/>
+                <StringItem index="5" value="F"/>
+                <StringItem index="6" value="G"/>
               </StringArray>
             </Property>
           </Properties>
