--- a/TPMetodosAgiles/src/main/java/Presentacion/ListadoLicencias.form
+++ b/TPMetodosAgiles/src/main/java/Presentacion/ListadoLicencias.form
@@ -161,7 +161,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Microsoft JhengHei UI" size="36" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Listado de licencias vigentes"/>
+            <Property name="text" type="java.lang.String" value="Listado de licencias"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="tFiltro">
@@ -185,11 +185,12 @@
               <Font name="Microsoft JhengHei UI" size="14" style="1"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="4">
+              <StringArray count="5">
                 <StringItem index="0" value="Apellido"/>
                 <StringItem index="1" value="Nombre"/>
                 <StringItem index="2" value="Grupo"/>
-                <StringItem index="3" value="Donante"/>
+                <StringItem index="3" value="Factor"/>
+                <StringItem index="4" value="Donante"/>
               </StringArray>
             </Property>
           </Properties>
@@ -255,15 +256,20 @@
                   <Font name="Microsoft JhengHei UI" size="12" style="1"/>
                 </Property>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                  <Table columnCount="7" rowCount="4">
+                  <Table columnCount="8" rowCount="4">
                     <Column editable="false" title="ID Licencia" type="java.lang.Object"/>
                     <Column editable="false" title="Clase" type="java.lang.Object"/>
                     <Column editable="false" title="Vigencia" type="java.lang.Object"/>
                     <Column editable="false" title="Apellido" type="java.lang.Object"/>
                     <Column editable="false" title="Nombre" type="java.lang.Object"/>
-                    <Column editable="false" title="Grupo +/-" type="java.lang.Object"/>
+                    <Column editable="false" title="Grupo Sanguineo" type="java.lang.Object"/>
+                    <Column editable="false" title="Factor" type="java.lang.Object"/>
                     <Column editable="false" title="Donante" type="java.lang.Object"/>
                   </Table>
+                </Property>
+                <Property name="autoResizeMode" type="int" value="4"/>
+                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                  <Color id="Cursor Por defecto"/>
                 </Property>
               </Properties>
             </Component>
